[package]
name = "picasound"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_refcell = "0.1.8"
cpal = "0.14.0"
crossbeam-channel = "0.5.6"
glib = "0.15.12"
gstreamer = "0.18.8"
gstreamer-app = "0.18.7"
gstreamer-rtsp-server = "0.18.7"
gstreamer-video = "0.18.7"
once_cell = "1.15.0"
petgraph = "0.6.2"
rand = "0.8.5"
realfft = "3.0.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
